EEC_InitBackup/src/objects/Licensing_Transaction__c.object
<CustomObject>
    <description>Licenses object is used to manage license applications and provisional and full licenses.</description>
    <fields>
        <fullName>Abused_or_neglected_a_child_Description__c</fullName>
        <label>Abused or neglected child Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Abused_or_neglected_a_child__c</fullName>
        <label>Abused or neglected child</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alcoholic_Bev_Narcotics_Drugs_Desc__c</fullName>
        <label>Alcoholic Bev., Narcotics, Drugs Desc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Foster_Care_Provider_Descrip__c</fullName>
        <label>Approved Foster Care Provider Descrip.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_Foster_Care_Provider__c</fullName>
        <label>Approved Foster Care Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_by_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is checked if the transaction was reviewed and approved by the Manager of the transaction assignee</description>
        <label>Approved by Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Manager_Email__c</fullName>
        <inlineHelpText>Email of the manager of the user assigned to the transaction (used in the approval process)</inlineHelpText>
        <label>Assigned To Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Phone__c</fullName>
        <formula>Assigned_To__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Licensing_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_User_Email__c</fullName>
        <description>Email address for the record&apos;s assigned user. Will be updated via a field update every time the record is updated and/or created</description>
        <inlineHelpText>Email address for the record&apos;s assigned user</inlineHelpText>
        <label>Assigned User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me_Or_Subordinates__c</fullName>
        <description>Used in report to filter on my Transactions and the ones of my team. Used for Supervisor dashboard</description>
        <formula>OR( Assigned_to_Me__c ,
 Assigned_To__r.ManagerId =  $User.Id ,
  Assigned_To__r.Manager.ManagerId =  $User.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Me Or Subordinates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me__c</fullName>
        <description>This flag is used in reports to identify &quot;My&quot; transactions</description>
        <formula>$User.Id =  Assigned_To__c</formula>
        <label>Assigned to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Fee__c</fullName>
        <label>Associated Fee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associated_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associated Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>At_Least_2_Exits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At Least 2 Exits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRC_City_1__c</fullName>
        <label>BRC City 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_City_2__c</fullName>
        <label>BRC City 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_City_3__c</fullName>
        <label>BRC City 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Current_Mailing_Address__c</fullName>
        <label>BRC Current Mailing Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Date_From_1__c</fullName>
        <label>BRC Date From 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_From_2__c</fullName>
        <label>BRC Date From 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_From_3__c</fullName>
        <label>BRC Date From 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_To_1__c</fullName>
        <label>BRC Date To 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_To_2__c</fullName>
        <label>BRC Date To 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_To_3__c</fullName>
        <label>BRC Date To 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Date_of_Birth__c</fullName>
        <label>BRC Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BRC_Father_First_Name__c</fullName>
        <label>BRC Father First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Father_Last_Name__c</fullName>
        <label>BRC Father Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_First_Name__c</fullName>
        <label>BRC First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Gender__c</fullName>
        <label>BRC Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BRC_Last_Name__c</fullName>
        <label>BRC Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Maiden_Name__c</fullName>
        <label>BRC Maiden Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Middle_Name__c</fullName>
        <inlineHelpText>Middle name as filled in BRC</inlineHelpText>
        <label>BRC Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Mother_First_Name__c</fullName>
        <label>BRC Mother First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Mother_Last_Name__c</fullName>
        <label>BRC Mother Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Mother_Maiden_Name__c</fullName>
        <label>BRC Mother Maiden Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Never_Had_SSN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BRC Never Had SSN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRC_Not_Renewal_Flag_For_DocuSign__c</fullName>
        <formula>IF( RecordType.Name = &quot;FCC Renewal&quot;, &quot;&quot;, &quot;X&quot;)</formula>
        <label>BRC Not Renewal Flag For DocuSign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Number_Street_1__c</fullName>
        <label>BRC Number Street 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Number_Street_2__c</fullName>
        <label>BRC Number Street 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Number_Street_3__c</fullName>
        <label>BRC Number Street 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Other_Addresses__c</fullName>
        <label>BRC Other Addresses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRC_Place_of_Birth__c</fullName>
        <label>BRC Place of Birth</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Renewal_Flag_For_DocuSign__c</fullName>
        <formula>IF( RecordType.Name = &quot;FCC Renewal&quot;, &quot;X&quot;, &quot;&quot;)</formula>
        <label>BRC Renewal Flag For DocuSign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Renewal__c</fullName>
        <label>BRC Renewal</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Result__c</fullName>
        <formula>IF( OR( ISPICKVAL(Licensee_CORI_Result__c, &quot;Denied&quot;), ISPICKVAL(Licensee_DCF_Result__c, &quot;Denied&quot;), ISPICKVAL(SORI_Result__c , &quot;Denied&quot;),  HH_Member_with_CORI_Denied__c &gt;=1,  HH_Member_with_DCF_Denied__c &gt;= 1 ), &quot;Denied BRC&quot;, &quot;OK&quot;)</formula>
        <label>BRC Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_SSN_Last_Six_Digits_2__c</fullName>
        <label>BRC SSN Last Six Digits (2)</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_SSN_Last_Six_Digits_4__c</fullName>
        <label>BRC SSN Last Six Digits (4)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_State_1__c</fullName>
        <label>BRC State 1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_State_2__c</fullName>
        <label>BRC State 2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_State_3__c</fullName>
        <label>BRC State 3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Suffix__c</fullName>
        <label>BRC Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Zip_1__c</fullName>
        <label>BRC Zip 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Zip_2__c</fullName>
        <label>BRC Zip 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRC_Zip_3__c</fullName>
        <label>BRC Zip 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Becoming_Foster_Care_Provider_Descrip__c</fullName>
        <label>Becoming Foster Care Provider Descrip.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Becoming_Foster_Care_Provider__c</fullName>
        <label>Becoming Foster Care Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Belong_to_Food_Program__c</fullName>
        <label>Belong to Food Program</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bus_Operated_Out_of_Own_Home_Descrip__c</fullName>
        <label>Bus.Operated Out of Own Home Descrip.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Operated_Out_of_Own_Home__c</fullName>
        <label>Business Operated Out of Own Home</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPR_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the CPR Certificate has been uploaded.</inlineHelpText>
        <label>CPR Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPR_Certification_Issue_Date__c</fullName>
        <label>CPR Certification Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPR_Certified__c</fullName>
        <label>CPR Certified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caring_For_Children_Not_Related__c</fullName>
        <label>Caring For Children Not Related</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certificate_of_License_Revoked_Suspend__c</fullName>
        <inlineHelpText>Certificate of License Revoked / Suspended</inlineHelpText>
        <label>Cert. of License Revoked / Suspended</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Certificate_or_License_Surrendered__c</fullName>
        <label>Certificate or License Surrendered</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charged_or_Arrested_for_Crime__c</fullName>
        <label>Charged or Arrested for Crime</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charges_Description__c</fullName>
        <label>Charges Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Checking_Provider_Record_Type_Name__c</fullName>
        <description>Temp field for testing....delete after testing</description>
        <formula>Provider__r.RecordType.Name</formula>
        <label>Checking Provider Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Emerg_Injury_Last_3_Years_Descrip__c</fullName>
        <inlineHelpText>Child Emergency / Injury Last 3 Years Description</inlineHelpText>
        <label>Child Emerg/Injury Last 3 Years Descrip.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Emergency_Injury_Last_3_Years__c</fullName>
        <label>Child Emergency / Injury Last 3 Years</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Children_Home_Schooled_Description__c</fullName>
        <label>Children Home Schooled Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Children_Home_Schooled__c</fullName>
        <label>Children Home Schooled</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Condition_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is checked when a condition has been added to the transaction</inlineHelpText>
        <label>Condition Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daily_Routine_and_Activities__c</fullName>
        <label>Daily Routine and Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Activity_Ends__c</fullName>
        <label>Date Activity Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Care_Resumes__c</fullName>
        <label>Date Care Resumes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Transaction Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_FCC_Orientation_Mod_1_Taken__c</fullName>
        <label>Date FCC Orientation Mod 1 Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_FCC_Orientation_Taken__c</fullName>
        <label>Date FCC Orientation Mod 2 Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_SIDS_Training_Taken__c</fullName>
        <label>Date Last SIDS Training Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Med_Administration_Training_Taken__c</fullName>
        <inlineHelpText>Date Medical Administration Training Taken</inlineHelpText>
        <label>Date Med. Administration Training Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Transaction_Closed__c</fullName>
        <inlineHelpText>Date and Time this transaction was closed. This field works as the &quot;Closed Date&quot; field but provide the time in addition.</inlineHelpText>
        <label>Date / Time Transaction Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Transportation_Training_Taken__c</fullName>
        <label>Date Transportation Training Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_USDA_Nutrition_Training_Taken__c</fullName>
        <label>Date USDA Nutrition Training Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Upgrading_Capacity_Training_Taken__c</fullName>
        <label>Date Upgrading Capacity Training Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealing_with_Child_Prot_Welfar_Descri__c</fullName>
        <inlineHelpText>Dealings with Child Protection / Child Welfare Description</inlineHelpText>
        <label>Dealing with Child Prot. / Welfar Descri</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealings_with_Child_Prot_Child_Welfar__c</fullName>
        <inlineHelpText>Dealings with Child Protection / Child Welfare Agency</inlineHelpText>
        <label>Dealings with Child Prot. / Child Welfar</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Info_Missing_Initial_Date__c</fullName>
        <label>Document / Info. Missing Initial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Information_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document / Information Missing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drinking_Water_Source__c</fullName>
        <label>Drinking Water Source</label>
        <picklist>
            <picklistValues>
                <fullName>Town Water Supply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Water Supply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evening_Overnight_Weekend_Care__c</fullName>
        <label>Evening, Overnight, Weekend Care</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exits_Descriptions__c</fullName>
        <label>Exits Descriptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experience_Caring_for_Children_QUalifica__c</fullName>
        <inlineHelpText>Experience Caring for Children Qualifications Description</inlineHelpText>
        <label>Exp. Caring for Children Qual. Descrip.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FCC_Orientation_Module_II_Evidence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the FCC Orientation, Module II Evidence has been uploaded.</inlineHelpText>
        <label>FCC Orientation, Module II Evidence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCC_Orientation_Module_I_Evidence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FCC Orientation, Module I Evidence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCC_Residence_Description__c</fullName>
        <label>FCC Residence Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Paid__c</fullName>
        <formula>Total_Payment_Received__c &gt;= Associated_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Aid_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the First Aid Certificate has been uploaded.</inlineHelpText>
        <label>First Aid Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Aid_Certification_Issue_Date__c</fullName>
        <label>First Aid Certification Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Aid_Certified__c</fullName>
        <label>First Aid Certified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Floors_Description__c</fullName>
        <description>This field summarize the rooms that can be used for the care. It&apos;s composed of a concatenation of all rooms and updated by the system when the transaction is closed</description>
        <label>Floors Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HH_Member_with_CORI_Denied__c</fullName>
        <description>Count the number of household members with CORI denied</description>
        <label>HH Member with CORI Denied</label>
        <summaryFilterItems>
            <field>Household_Member__c.CORI_Result__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HH_Member_with_DCF_Denied__c</fullName>
        <description>Count the number of household member with DCF denied</description>
        <label>HH Member with DCF Denied</label>
        <summaryFilterItems>
            <field>Household_Member__c.DCF_Result__c</field>
            <operation>equals</operation>
            <value>Denied</value>
        </summaryFilterItems>
        <summaryForeignKey>Household_Member__c.Licensing_Transactions__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Heating_Elements__c</fullName>
        <label>Heating Elements</label>
        <picklist>
            <picklistValues>
                <fullName>Radiators, Hot Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas on Gas Stove (heating)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Space Heater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vents / Grates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fireplaces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coal / Pellet / Wood Burning Stove</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Indoor_Outdoor_Space_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indoor/Outdoor Space Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Not_Blank_Submission_Date__c</fullName>
        <description>Temporary field added for testing...delete after testing</description>
        <formula>NOT( ISBLANK( Submission_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Not Blank Submission Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Not_Blank_Submitter__c</fullName>
        <description>Temp field for testing....delete after testing complete</description>
        <formula>NOT( ISBLANK( Submitter__r.Id ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Not Blank Submitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Renewal_Transaction__c</fullName>
        <formula>IF(  RecordType.Name = &quot;FCC Renewal&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Renewal Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Reached_Step__c</fullName>
        <inlineHelpText>Last steps reached by Portal User.</inlineHelpText>
        <label>Last Reached Step</label>
        <picklist>
            <picklistValues>
                <fullName>Instructions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction / Provider Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Members</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Status and Capacity / Assistant Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEC Involvement Experience &amp; Professional Exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Background Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indoor / Outdoor space information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Routing Activities / Technical Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attachments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Summary and Submission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Issue_Date__c</fullName>
        <label>License Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>License Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>License_Requested__c</fullName>
        <label>License Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Up to 6 Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 8 Children; 2 School Aged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up to 10 Children</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Regular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probationary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licensee_BRC_Consent_Request_Date__c</fullName>
        <inlineHelpText>Date the electronic version of Tax Certification Statement was first requested</inlineHelpText>
        <label>Licensee BRC Consent Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensee_BRC_Consent_Signed_Date__c</fullName>
        <inlineHelpText>Date / Time the BRC consent of the licensee was signed</inlineHelpText>
        <label>Licensee BRC Consent Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensee_BRC_Consent_Status__c</fullName>
        <inlineHelpText>Status of the licensee BRC Consent form (if electronic signature is used, this field is updated automatically)</inlineHelpText>
        <label>Licensee BRC Consent Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licensee_BRC_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licensee BRC Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licensee_CORI_Reception_Date__c</fullName>
        <label>Licensee CORI Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensee_CORI_Result__c</fullName>
        <label>Licensee CORI Result</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved after discretionary review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licensee_DCF_Reception_Date__c</fullName>
        <label>Licensee DCF Reception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensee_DCF_Result__c</fullName>
        <label>Licensee DCF Result</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved after discretionary review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Live_at_New_Address__c</fullName>
        <label>Live at New Address</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>